--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,5 +1,18 @@
 {% if site.google_analytics %}
+
+
+
 	<!-- Google Analytics -->
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0Q601YCLYG"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-0Q601YCLYG');
+	</script>
+
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
