--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -1,15 +1,13 @@
-<div class="posts">
-  {% for post in site.books %}
-    <article class="post">
+<article class="post">
+  <h1>{{ page.title }}</h1>
 
-      <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
+  <div class="entry">
+    {{ content }}
+  </div>
 
-      <div class="entry">
-        {{ post.excerpt }}
-      </div>
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
-    </article>
-  {% endfor %}
-</div>
-
+  {% include disqus.html %}
+</article>
