--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/_blog">Blog</a>
+            <a href="{{ site.baseurl }}/_books">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
