--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}">Blog</a>
-            <a href="{{ site.baseurl }}/_books">Books</a>
+            <a href="{{ site.baseurl }}/blogs">Blog</a>
+            <a href="{{ site.baseurl }}/books">Books</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
