--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: $floralwhite;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -274,7 +274,7 @@ nav {
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 6px solid #000;
   background-color: $lightGray;
 }
 
