--- a/style.scss
+++ b/style.scss
@@ -274,7 +274,7 @@ nav {
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
-  border-bottom: 6px solid #000;
+  border-bottom: 1px solid #gray;
   background-color: $lightGray;
 }
 
