--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $floralwhite;
+    background: $floralwhite;
   font: 18px/1.4 $roboto;
   color: $darkGray;
 }
@@ -266,6 +266,7 @@ nav {
   }
 
   .read-more {
+    text-transform: uppercase;
     font-size: 15px;
   }
 }
@@ -273,7 +274,7 @@ nav {
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #gray;
+  border-bottom: 1px solid #ddd;
   background-color: $lightGray;
 }
 
