--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
           </nav>
         </header>
       </div>
+      <i>A bi-weekly blog about Software Development, iOS and Mobile Application Security</i>
     </div>
 
     <div id="main" role="main" class="container">
@@ -50,4 +51,3 @@
     {% include analytics.html %}
   </body>
 </html>
-
