--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/blogs">Blog</a>
-            <a href="{{ site.baseurl }}/books">Books</a>
-            <a href="{{ site.baseurl }}/ios">iOS</a>
+<!--            <a href="{{ site.baseurl }}/books">Books</a> 
+            <a href="{{ site.baseurl }}/ios">iOS</a> -->
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
