--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -2,7 +2,7 @@
 
 
 
-	<!-- Google Analytics 
+	<!-- Google Analytics -->
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0Q601YCLYG"></script>
 	<script>
@@ -11,7 +11,7 @@
 	  gtag('js', new Date());
 
 	  gtag('config', 'G-0Q601YCLYG');
-	</script> -->
+	</script> 
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
