--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -12,7 +12,7 @@
 
 	  gtag('config', 'G-0Q601YCLYG');
 	</script> 
-
+<!-- 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,5 +25,5 @@
 		  'title': '{{ page.title | replace: "'", "\\'" }}'
 		});
 	</script>
-	<!-- End Google Analytics -->
+	End Google Analytics -->
 {% endif %}
